package com.example.restfullbadgesystem.domain;

public enum LocationType {
    DINING_HALL, MEDITATION_HALL, FLYING_HALL, CLASSROOM, GYMNASIUM, DORMITORY
}
