package com.example.restfullbadgesystem.domain;

public enum Role {
    STUDENT, STAFF, FACULTY
}
