@startuml
class Badge {
    +issueDate
    +expireDate
    +isActive
}


class Member {
    +firstName
    +lastName
    +email
}


class Membership{
    +startDate
    +endDate
}

class Plan {
    +name
    +description
}

enum Role {
    +name
}

class Location {
    +name
    +description
    +capacity
    +address
    +occupied
}

class LimitedMembership {
 +limit
}

class TimeSlot {
    +startDate
    +endDate
}

enum DayOfWeek {
    +dayOfWeek
}

class Transaction {
    dateTime
    log
}
enum TrasactionType {
    CHECKIN, CHECKOUT
}
enum LocationType {
    DINING_HALL, MEDITATION_HALL ...
}

Member "1" o--> "*" Badge: has
Member " 1 " o--> " * " Membership : has
Membership " * " o-->" 1 " Plan: belongs to
LimitedMembership --|> Membership
Plan "1 " o--> "*" Role : Allowed roles
Location "1" o-->"*" TimeSlot
Location "*" o--> "1" LocationType
TimeSlot "*" *--> "1" DayOfWeek
Plan "*" o--> "1" LocationType : Allowed Locations

Role "*" <-- "*" Member
Transaction --> Member: logs
Transaction --> Location: logs
Transaction --> TrasactionType

@enduml